[project]
name = "cloud-coding"
version = "0.1.0"
dependencies = [
    "langgraph>=0.3.5,<0.4.0",
    "langchain>=0.3.0",
    "cloudcode>=0.0.6",
    "langchain-anthropic",
    "langgraph-codeact",
    "langgraph-cli[inmem]",
    "langchain-openai",
    "langgraph-supervisor",
    "markdownify",
    "bs4",
    "httpx",
    "requests",
    "exa_py",
    "langchain-core",
    "trustcall",
]

# Add this section to automatically find packages
[tool.setuptools]
packages = { find = {} }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

